# JavaFF

./: .gitignore  README.md  package.xml
javaff/: build.gradle  gradle.properties  package.xml
javaff/src/main/java/it/unitn/rti/bdi/javaff/: OperationResult.java  PlannerClient.java  ROS2JavaFF.java  ROS2JavaFFOffline.java  ROS2JavaFFSearch.java  ROS2JavaFFServer.java  SearchDataUtils.java  SearchParams.java  (+3 more)
javaff/src/main/java/javaff/: JavaFF.java
javaff/src/main/java/javaff/data/: Action.java  Condition.java  Effect.java  GroundCondition.java  GroundEffect.java  Literal.java  Parameter.java  Plan.java  TimeStampedAction.java  TimeStampedPlan.java  TotalOrderPlan.java
javaff/src/main/java/javaff/data/metric/: BinaryFunction.java  FunctionSymbol.java  NumberFunction.java  TotalTimeFunction.java
javaff/src/main/java/javaff/data/strips/: InstantAction.java  NOT.java  OperatorName.java  PDDLObject.java  Predicate.java  PredicateSymbol.java  Proposition.java  STRIPSInstantAction.java  SimpleType.java  Variable.java
javaff/src/main/java/javaff/data/temporal/: DurationFunction.java  DurativeAction.java  EndInstantAction.java  SplitInstantAction.java  StartInstantAction.java  UngroundDurativeAction.java
javaff/src/main/java/javaff/parser/: PDDL21parser.java
javaff/src/main/java/javaff/planning/: HelpfulFilter.java  NullFilter.java  STRIPSState.java  State.java  TemporalMetricState.java
javaff/src/main/java/javaff/scheduling/: JavaFFScheduler.java  MatrixSTN.java
javaff/src/main/java/javaff/search/: BestFirstSearch.java  EnforcedHillClimbingSearch.java
(+95 files in other folders)
